# gemcausal

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: format.yml
data/: README.md
src/: __init__.py  argument.py  logging.py  main.py  setting.py
src/data/: fincausal.py  japanese.py  load_data.py  reco.py  split_dataset.py  unicausal.py
src/data/preprocess/: unicausal.py
src/prediction/: __init__.py  hf_encoder.py  metrics.py  openai.py  span_f1_precision_recall.py
template/: openai_chain_classification.json  openai_sequence.json  openai_sequence_classification.json  openai_sequence_classification_financial_analyst.json  openai_sequence_classification_financial_expert.json  openai_span_detection.json  openai_span_detection_by_sentence.json  openai_span_detection_by_word.json  openai_span_detection_financial_analyst.json  openai_span_detection_financial_expert.json  openai_span_detection_reverse.json
tests/: test_argument.py  test_logging.py  test_main.py  test_setting.py
tests/data/: .test_download.py  test_load_data.py  test_reco.py  test_split_dataset.py  test_unicausal.py
tests/data/preprocess/: test_unicausal.py
tests/prediction/: test_hf_encoder.py  test_metrics.py  test_openai.py  test_span_f1_precision_recall.py
